vlib/v/checker/tests/return_void_type_err.out
vlib/v/checker/tests/return_void_type_err.vv:2:2: error: cannot return a void type `println(msg)`
    1 | fn hello(msg string) ? {
    2 |     return println(msg)
      |     ~~~~~~~~~~~~~~~~~~~
    3 | }
    4 |
